test/tasty/pos/src-2/tastytest/TestDelayed.scala
package tastytest

object TestDelayed {

  compiletimeHasChild[Delayed]("tastytest.Delayed.Instance")

}
