test/tasty/neg/src-2/TestHello_2_fail.scala
package helloworld

object TestHello_2 {
  HelloWorld.acceptsOnlyMsg1(HelloWorld.msg1)
  HelloWorld.inlineMethod(1)
}
